--- a/layouts/partials/autocomplete.html
+++ b/layouts/partials/autocomplete.html
@@ -138,7 +138,7 @@
 </style>
 
 <script>
-var client = algoliasearch('8UWZ851DVO', 'f066c0a7bb46830362080490d0bb8c30');
+var client = algoliasearch('FK8TLVPLHY', 'a13436f2aa5a5acc776010ad74a9df50');
 var index = client.initIndex('default');
 var catSeq = '';
 var url = "";
