--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -29,6 +29,7 @@
 @import "components/banner";
 @import "components/text-block";
 @import "components/modal-text";
+@import "components/tab";
 
 // Layouts
 @import "layouts/site";
