--- a/layouts/partials/departement_feed_section.html
+++ b/layouts/partials/departement_feed_section.html
@@ -11,18 +11,38 @@
     </div>
     {{ end }}
 
-    <div class="container" container-grid><div class="grid">
-        {{ $departements := (.Site.GetPage "section" "/departement").Pages }}
-        {{ range  $departement := $departements}}
-            {{range $section := .Params.sections}}
-                {{if eq $section.type "hero_section"}}
-                {{ $include_dict := dict "section" $section "site" $departement}}
-                {{ partial "departement_feed_item.html" $include_dict }}
-                {{end}}
-            {{end}}
-        {{ end }}
-    </div></div>
+<div class="container">
+    <div class="tabs effect-3">
+        <!-- tab-title -->
+        <input type="radio" id="tab-1" name="tab-effect-3" checked="checked">
+        <span>Ikhwan</span>
 
+        <input type="radio" id="tab-2" name="tab-effect-3">
+        <span>Akhwat</span>
+
+        <div class="line ease"></div>
+
+        <!-- tab-content -->
+        <div class="tab-content">
+            <section id="tab-item-1">
+                <div class="container" container-grid><div class="grid">
+                    {{ $departements := (.Site.GetPage "section" "/departement").Pages }}
+                    {{ range  $departement := $departements}}
+                        {{range $section := .Params.sections}}
+                            {{if eq $section.type "hero_section"}}
+                            {{ $include_dict := dict "section" $section "site" $departement}}
+                            {{ partial "departement_feed_item.html" $include_dict }}
+                            {{end}}
+                        {{end}}
+                    {{ end }}
+                </div></div>
+            </section>
+            <section id="tab-item-2">
+                <h1>Two</h1>
+            </section>
+        </div>
+    </div>
+</div>
 <script>
 	var element = document.querySelectorAll('[container-grid]');
 
